--- a/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
+++ b/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
@@ -18,7 +18,7 @@
                   <a class="popup-with-zoom-anim" (click)="onSelect(rentService)" style="width: 100px;">More</a>
                    <div class="row">
                     <a class="popup-with-zoom-anim" [hidden]="check()" style="margin-left: -2%; margin-top: 5%; width: 95px;" (click)="onSelectRentService(rentService)">Change</a>
-                    <a class="popup-with-zoom-anim" [hidden]="check()" style="margin-top: 5%; width: 100px; margin-left: 15px;" (click)="onDelete(rentService.serviceId)">Delete</a>	                    <a class="popup-with-zoom-anim" [hidden]="check()" style="margin-top: 5%; width: 95px; margin-left: 10px;" (click)="onDelete(rentService.serviceId)">Delete</a>
+                    <a class="popup-with-zoom-anim" [hidden]="check()" style="margin-top: 5%; width: 95px; margin-left: 10px;" (click)="onDelete(rentService.serviceId)">Delete</a>
                     <a class="popup-with-zoom-anim" [hidden]="check()" style="margin-top: 5%; width: 95px; margin-left: 10px;" (click)="onInfo(rentService)">Info</a>
                    </div>
                   </div>
