--- a/clover/src/app/components/car/rent-a-car-filter/admin-info/admin-info.component.css
+++ b/clover/src/app/components/car/rent-a-car-filter/admin-info/admin-info.component.css
@@ -13,11 +13,11 @@ body {
   display: inline-block;
 }
 
-.main {
+.nav {
     width: 100%;
     margin-top: -3%;
 }
-.main-agileinfo {
+.nav-agileinfo {
     margin: 0 auto;
 	text-align: center;
 }
