#AB30 - Social Login

--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -48,10 +48,10 @@
 
                     <p>or sign in with:</p>
                     <div style="text-align: center;">
-                        <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
-                        <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
-                        <a href="https://twitter.com/" class="fa fa-twitter"></a>
-                        <a href="https://mail.google.com/" class="fa fa-google"></a>
+                        <a (click)="OnFacebook()" class="fa fa-facebook"></a>
+                        <a (click)="OnInstagram()" class="fa fa-instagram"></a>
+                        <a (click)="OnTwitter()" class="fa fa-twitter"></a>
+                        <a (click)="OnGoogle()" class="fa fa-google"></a>
                     </div>
                 </form>
             </div>
