Fix - Update car and rent service

--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -179,12 +179,12 @@
 </div>
 
 
-<section id="locations" class="locations">
+<!-- <section id="locations" class="locations">
   <agm-map [zoom]="17" [latitude]="rentService.lat" [longitude]="rentService.lng">
       <agm-marker [latitude]="rentService.lat" [longitude]="rentService.lng">
       </agm-marker>
   </agm-map>
-</section>
+</section> -->
 
 
 <section id="contact" class="contact">
