--- a/clover/src/app/components/sing-in/sing-up/sing-up.component.html
+++ b/clover/src/app/components/sing-in/sing-up/sing-up.component.html
@@ -45,10 +45,10 @@
                   </div>
                 </div>
 
-                  <div style="margin-left: 16px; width: 420px;" class="form-group">
+                  <!-- <div style="margin-left: 16px; width: 420px;" class="form-group">
                     <input type="string" #userType="ngModel" [(ngModel)]="service.formData.userType" name="userType" id="UserType" class="form-input" placeholder="User Type" required/>
                     <div class="validation-error" *ngIf="userType.invalid && userType.touched">This field is required</div>
-                  </div>
+                  </div> -->
 
                   <div class="form-group">
                       <input type="submit" [disabled]="form.invalid"  name="submit" id="submit" class="form-submit" value="Sign up"/>
