--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -62,13 +62,8 @@
 										</div>
 										<div class="col-md-2">
 											<div class="form-group">
-												<span class="form-label">Children (0-17)</span>
-												<select class="form-control">
-													<option>0</option>
-													<option>1</option>
-													<option>2</option>
-												</select>
-												<span class="select-arrow"></span>
+												<span class="form-label">Baggeg </span>
+												<input class="form-control" type="text" placeholder="Baggeg" id="searchBaggegFilter">
 											</div>
 										</div>
 									</div>
@@ -76,12 +71,9 @@
 										<div class="col-md-3">
 											<div class="form-group">
 												<span class="form-label">Travel class</span>
-												<select class="form-control">
-													<option>Economy class</option>
-													<option>Business class</option>
-													<option>First class</option>
-												</select>
-												<span class="select-arrow"></span>
+												<input class="form-control" type="text" placeholder="Class" id="searchClassFilter">
+												
+											
 											</div>
 										</div>
 										<div class="col-md-3">
