#AB21 - Rent Office

--- a/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
+++ b/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
@@ -120,13 +120,14 @@
         <form style="margin-top: 17%;">
               <p style="color:white;"> Admin Services</p>
                 <div class="form-btn">
-                  <button class="submit-btn" type="button" (click)="onAddCar()">Add Car</button>
+                  <!-- <button class="submit-btn" type="button" (click)="onAddCar()">Add Car</button> -->
                 </div>
         </form>
       </div>
       </div>
   </section>
 
+  <button class="submit-btn" type="button" (click)="onAddCar()">Add Car</button>
 
 
   <div class="conteiner3" id="style-22">
