--- a/clover/src/app/components/car/rent-a-car/locations-rent/locations-rent/locations-rent.component.html
+++ b/clover/src/app/components/car/rent-a-car/locations-rent/locations-rent/locations-rent.component.html
@@ -12,7 +12,7 @@
 </header>
 
 <div *ngFor="let office of this.allOffice" class="div1">
-  <div class="divName">{{office.name}}</div>
+  <div class="divName">{{office.officeName}}</div>
   <div class="div5To"><Address></Address>: {{office.address}} </div>
   
   <div class="btn">
