--- a/clover/src/app/components/car/add-car/add-car.component.html
+++ b/clover/src/app/components/car/add-car/add-car.component.html
@@ -2,7 +2,7 @@
 
   <input type="hidden" name="carId" [value]="service.formData.carId">
 
-  <input type="hidden" name="RentServiceServiceId" [value]="rentService.selectedService.serviceId">
+  <input type="hidden" name="RentServiceServiceId" [value]="rentService.serviceId">
 
     <div class="form-group">
       Rent Service Id: 
