#AB17 - Routing, and bug fix

--- a/clover/src/app/components/car/add-car/add-car.component.html
+++ b/clover/src/app/components/car/add-car/add-car.component.html
@@ -4,16 +4,16 @@
 
   <input type="hidden" name="RentServiceServiceId" [value]="rentService.serviceId">
 
-    <div class="form-group">
+    <!-- <div class="form-group">
       Rent Service Id: 
       <input #RentServiceServiceId="ngModel" [(ngModel)]="service.formData.RentServiceServiceId" name="RentServiceServiceId" type="number" class="form-input" id="RentServiceServiceId" required/>
-    </div>
+    </div> -->
 
-    <div class="form-group">
+    <!-- <div class="form-group">
       Rent Service Name: 
       <input #serviceName="ngModel" [(ngModel)]="service.formData.serviceName" name="serviceName" type="text" class="form-input" id="serviceName" required/>
       <div class="validation-error" *ngIf="serviceName.invalid && serviceName.touched">This field is required</div>
-    </div>
+    </div> -->
 
     <div class="form-group">
       Car Brand:
