--- a/clover/src/app/components/car/add-car/change-car/change-car.component.html
+++ b/clover/src/app/components/car/add-car/change-car/change-car.component.html
@@ -2,18 +2,19 @@
 
     <input type="hidden" name="carId" [value]="service.formData.carId">
   
-    <input type="hidden" name="RentServiceServiceId" [value]="rentService.selectedService.serviceId">
+    <input type="hidden" name="RentServiceServiceId" [value]="rentService.serviceId">
+
   
-      <div class="form-group">
+      <!-- <div class="form-group">
         Rent Service Id: 
         <input #RentServiceServiceId="ngModel" [(ngModel)]="service.formData.RentServiceServiceId" name="RentServiceServiceId" type="number" class="form-input" id="RentServiceServiceId" required/>
-      </div>
+      </div> -->
   
-      <div class="form-group">
+      <!-- <div class="form-group">
         Rent Service Name: 
         <input #serviceName="ngModel" [(ngModel)]="service.formData.serviceName" name="serviceName" type="text" class="form-input" id="serviceName" placeholder="{{car.serviceName}}" required/>
         <div class="validation-error" *ngIf="serviceName.invalid && serviceName.touched">This field is required</div>
-      </div>
+      </div> -->
   
       <div class="form-group">
         Car Brand:
@@ -77,7 +78,7 @@
       </div>
   
       <div class="form-group">
-        <input type="submit" [disabled]="form.invalid" name="submit" id="submit" class="form-submit" value="Add Car"/>
+        <input type="submit" [disabled]="form.invalid" name="submit" id="submit" class="form-submit" value="Change Car"/>
     </div>
   
     <button mat-dialog-close> Close</button>
