--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -22,19 +22,19 @@
                     <button type="button" class="btn" (click)="showRegister()"><span>Register</span></button>
                   </div>
 
-                <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
+                <form #form="ngForm" [formGroup]="singInForm" autocomplete="off" (ngSubmit)="onSubmit()" id="signup-form" class="signup-form">
                     <div class="form-group">
-                        <input type="mail" #email="ngModel" [(ngModel)]="service.formData.email" name="email" id="Email" class="form-input" placeholder="Mail" required/>
-                        <div class="validation-error" *ngIf="email.invalid && email.touched">This field is required</div>
+                        <input type="email"name="email" id="Email" class="form-input" placeholder="Mail" formControlName="email"/>
+                        <div class="validation-error" *ngIf="(singInForm.get('email').invalid && singInForm.get('email').touched)">This field is required</div>
                     </div>
 
                     <div class="form-group">
-                        <input type="password" #password="ngModel" [(ngModel)]="service.formData.password" name="password" id="Password" class="form-input" placeholder="Password" required/>
-                        <div class="validation-error" *ngIf="password.invalid && password.touched">This field is required</div>
+                        <input type="password" name="password" id="Password" class="form-input" placeholder="Password" formControlName="password"/>
+                        <div class="validation-error" *ngIf="singInForm.get('password').invalid && singInForm.get('password').touched">This field is required</div>
                       </div>
   
                     <div class="form-group">
-                        <input type="submit" [disabled]="form.invalid" (click)=becomeAUser() name="submit" id="submit" class="form-submit" value="Sign in"/>
+                        <input type="submit" [disabled]="singInForm.invalid" (click)=becomeAUser() name="submit" id="submit" class="form-submit" value="Sign in"/>
                     </div>
 
                     <div class="d-flex justify-content-around">
