--- a/clover/src/app/app.component.html
+++ b/clover/src/app/app.component.html
@@ -8,14 +8,20 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="sing-in">Sing In</a>
+      <li *ngIf="!IsSignedIn()" class="nav-item">
+        <a  class="nav-link" routerLink="sing-in">Sing In</a>
+      </li>
+      <li *ngIf="IsSignedIn()" class="nav-item">
+        <a  class="nav-link" routerLink="sing-in">Log Out</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="flights">Flights</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="car">Cars</a>
+      </li>
+      <li>
+        {{localStorage.getItem('userEmail')}}
       </li>
     </ul>
     <form class="form-inline">
