Dodate promene, merge fix

--- a/clover/src/app/app.component.html
+++ b/clover/src/app/app.component.html
@@ -21,7 +21,7 @@
         <a class="nav-link" routerLink="car">Cars</a>
       </li>
       <li>
-        {{localStorage.getItem('userEmail')}}
+        <!-- {{localStorage.getItem('userEmail')}} -->
       </li>
     </ul>
     <form class="form-inline">
