--- a/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
+++ b/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
@@ -131,11 +131,11 @@
 
 
   <div class="conteiner3" id="style-22">
-    <!-- <div [hidden]="this.data.selectedService.serviceCars.length !== 0">
+    <div [hidden]="this.rentService.serviceCars.length !== 0">
       <hr/>
       <h5 style="text-align: center;">Trenutno nema dostupnih vozila koja zadovoljavaju zadate parametre.</h5>
     </div>
-    <div [hidden]="this.data.selectedService.serviceCars.length === 0"> -->
+    <div [hidden]="this.rentService.serviceCars.length === 0">
       <app-car-filter [filtredCars]="filtredCars"></app-car-filter>
-    <!-- </div> -->
+     </div>
     </div>
