--- a/clover/src/app/components/register-user/sing-up-rent-admin/sing-up-rent-admin/sing-up-rent-admin.component.html
+++ b/clover/src/app/components/register-user/sing-up-rent-admin/sing-up-rent-admin/sing-up-rent-admin.component.html
@@ -1,7 +1,7 @@
 <section class="signup">
     <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
 
-      <input type="hidden" name="userId" [value]="service.formData.userId">
+      <input type="hidden" name="userId" [value]="service.formData.UserId">
 
       <div style="margin-left: 16px;" class="row">
         <div class="form-group">
