--- a/clover/src/app/components/sing-in/sing-up/sing-up.component.html
+++ b/clover/src/app/components/sing-in/sing-up/sing-up.component.html
@@ -2,7 +2,7 @@
   <section class="signup">
               <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
 
-                <input type="hidden" name="userId" [value]="service.formData.userId">
+                <input type="hidden" name="userId" [value]="service.formData.UserId">
 
                 <div>
                   <button class="btn" (click)="navigateTo('sing-in')" (click)="sendMessage()"><span>Sing in</span></button>
