Ispis jednog bukiranog leta
Logout, filteri za datum

--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -40,13 +40,13 @@
 										<div class="col-md-3">
 											<div class="form-group">
 												<span class="form-label">Departing</span>
-												<input class="form-control" type="date" required>
+												<input class="form-control" type="date" required id="searchDepartingFilter">
 											</div>
 										</div>
 										<div class="col-md-3">
 											<div class="form-group">
 												<span class="form-label">Returning</span>
-												<input class="form-control" type="date" required>
+												<input class="form-control" type="date" required id="searchReturningFilter" >
 											</div>
 										</div>
 										<div class="col-md-2">
@@ -71,7 +71,7 @@
 										<div class="col-md-3">
 											<div class="form-group">
 												<span class="form-label">Travel class</span>
-												<input class="form-control" type="text" placeholder="Class" id="searchClassFilter">
+												<input class="form-control" type="text" placeholder="Class" required id="searchClassFFilter">
 												
 											
 											</div>
