--- a/clover/src/app/components/flights/search-flight/search-flight.component.html
+++ b/clover/src/app/components/flights/search-flight/search-flight.component.html
@@ -17,7 +17,7 @@
             <div class="div5To">{{f.to}}</div>
             <div class="divName">{{f.companyName}}</div>
             <div class="btn">
-            <button (click)="onSelect()" class="myButton">BOOK {{f.price}}$</button>
+            <button (click)="onSelect(f)" class="myButton">BOOK {{f.price}}$</button>
         </div>
         </div>
 
