--- a/clover/src/app/components/payment/payment.component.html
+++ b/clover/src/app/components/payment/payment.component.html
@@ -4,12 +4,12 @@
 
             <div  class="div1">
 
-                    <div class="div2">22.2.2022</div>
-                    <div class="div3From">Belgrade</div>
+                    <div class="div2">{{flightData.departing}}</div>
+                    <div class="div3From">{{flightData.from}}</div>
                    
-                    <div class="div4">21.4.2084</div>
-                    <div class="div5To">Paris</div>
-                    <div class="divName">WizzAir</div>
+                    <div class="div4">{{flightData.returning}}</div>
+                    <div class="div5To">{{flightData.to}}</div>
+                    <div class="divName">{{flightData.companyName}}</div>
                     <div class="btn">
                     
                 </div>
