#AB34 - Reservation Start

--- a/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
+++ b/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
@@ -1,9 +1,15 @@
+ <p> {{user.Name}} rent-car work</p>
  <h1 mat-dialog-title> {{car.brand}} {{car.model}}</h1>
  <div class="image" style="content:url({{car.imgUrl}})"></div>
  
- <form><!--</form>#form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form"> -->
+ <form>
+   
+  <!--</form>#form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form"> -->
 
     <!-- <input type="hidden" name="carId" [value]="service.formData.carId"> -->
+
+
+
     <div class="row">
         <div class="col-md-3">
             <div class="form-group">
